Seller registration & email verification
Added seller inputs and the registration backend logic.
Added email verification and mail template adjustment.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Avacean
 APP_ENV=local
 APP_KEY=base64:fT80R5Pev9ycQKjZX9Spum+9wHTtAT9yV7m1KVNMUT0=
 APP_DEBUG=true
@@ -28,14 +28,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=mail.405694.hstgr.cloud
+# MAIL_PORT=587
+# MAIL_USERNAME=verification@405694.hstgr.cloud
+# MAIL_PASSWORD=emailverificationpassword
+# MAIL_ENCRYPTION=ssl
+# MAIL_FROM_ADDRESS=verification@405694.hstgr.cloud
+# MAIL_FROM_NAME="${APP_NAME}"
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=mail.avacean.com
+MAIL_PORT=465
+MAIL_USERNAME=no-reply@avacean.com
+MAIL_PASSWORD=PPaasswordA
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=no-reply@avacean.com
+MAIL_FROM_NAME=Avacean
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
